[project]
name = "jbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.8",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter-book>=2.0.2",
    "pandas>=2.3.3",
    "supervision>=0.27.0",
    "ultralytics>=8.3.230",
]
